# libsshmem

./: .gitignore  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
include/: Makefile.am  jni_sshmem_api.h  jni_sshmem_channel.h  jni_sshmem_selector.h  sshmem_api.h
src/: Makefile  Makefile.am  Makefile.in  atomic64_64.h  jni_shmem_api.c  jni_sshmem_api.c  libsshmem.la  libsshmem_la-jni_shmem_api.lo  libsshmem_la-ring.lo  libsshmem_la-shmem_api.lo  rcommon.c  rcommon.h  ring.c  ring.h  shmem_api.c  sshmem_api.c
src/.deps/: libsshmem_la-jni_shmem_api.Plo  libsshmem_la-ring.Plo  libsshmem_la-shmem_api.Plo
src/.libs/: libsshmem.la  libsshmem.lai  libsshmem.so.0  libsshmem.so.0.0.0
test/: Makefile.am  apipoll.c  apird.c  apiwr.c  rcat.c  ringtest.c  ringtest.h  rrd.c  rwr.c  test_poll.sh  test_ring.sh  test_shmem_api.sh
